[package]
name = "silverbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
path = "src/lib/lib.rs"


[[bin]]
path = "src/main.rs"
name = "silverbook"


[dependencies]
actix-web = "4"
reqwest = "0.11.12"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
